--- a/src/app/Fornitore/modifica-fornitore/modifica-fornitore.component.html
+++ b/src/app/Fornitore/modifica-fornitore/modifica-fornitore.component.html
@@ -19,6 +19,9 @@
     <div class="form-group">
       <label for="partitaIVA">Partita IVA:</label>
       <input type="text" id="partitaIVA" [(ngModel)]="fornitore.partitaIVA" name="partitaIVA">
+      <div *ngIf="partitaIVAInvalid" class="error-message">
+        La Partita IVA deve contenere esattamente 11 cifre.
+      </div>
     </div>
 
     <div class="form-group">
