--- a/src/app/Fornitore/modifica-fornitore/modifica-fornitore.component.html
+++ b/src/app/Fornitore/modifica-fornitore/modifica-fornitore.component.html
@@ -20,7 +20,7 @@
       <label for="partitaIVA">Partita IVA:</label>
       <input type="text" id="partitaIVA" [(ngModel)]="fornitore.partitaIVA" name="partitaIVA">
       <div *ngIf="partitaIVAInvalid" class="error-message">
-        La Partita IVA deve contenere esattamente 11 cifre.
+        La Partita IVA deve contenere esattamente 11 cifre..
       </div>
     </div>
 
