--- a/src/app/home/menu/menu.component.html
+++ b/src/app/home/menu/menu.component.html
@@ -75,7 +75,14 @@
         <i class="pi pi-fw pi-user"></i>
         <span>Ordini Cliente</span>
       </a>
+      
       <ul class="submenu">
+        <li>
+          <a routerLink="/ordine-cliente" routerLinkActive="active">
+            <i class="pi pi-fw pi-plus"></i>
+            <span>Elenco Ordini Cliente</span>
+          </a>
+        </li>
         <li>
           <a routerLink="/aggiungi-ordine-cliente" routerLinkActive="active">
             <i class="pi pi-fw pi-plus"></i>
