--- a/src/app/Fornitore/aggiungi-fornitore/aggiungi-fornitore.component.css
+++ b/src/app/Fornitore/aggiungi-fornitore/aggiungi-fornitore.component.css
@@ -1,11 +1,24 @@
 .container {
-  max-width: 400px;
+  max-width: 50%;
   margin: 0 auto;
-  padding: 20px;
+  padding: 1%;
   background-color: #ffffff;
   border: 1px solid #634b3b;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Applica display flex e flex-direction: row ai form-group */
+.form-group {
+  margin-left: 25%;
+ /* Distribuisci uniformemente gli input */
+  max-width: 50%;
+  margin-bottom: 5px;
+}
+
+/* Imposta stile per gli input all'interno dei form-group */
+.form-group input {
+  max-width: 100%; /* Larghezza massima per ogni input */
 }
 
 h2 {
@@ -14,13 +27,12 @@ h2 {
   text-align: center;
 }
 
-.form-group {
-  margin-bottom: 15px;
-}
+
 
 label {
+  margin-right: 10%;
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 20px;
   font-weight: bold;
 }
 
