--- a/src/app/Prodotto/modifica-prodotto/modifica-prodotto.component.html
+++ b/src/app/Prodotto/modifica-prodotto/modifica-prodotto.component.html
@@ -1,44 +1,59 @@
-<div *ngIf="prodotto">
+<div *ngIf="prodotto" class="prodotto-wrapper">
   <h2>Modifica Prodotto</h2>
-  <form (ngSubmit)="salvaModifiche()">
+  <form [formGroup]="prodottoForm" (ngSubmit)="salvaModifiche()">
     <div class="form-group">
       <label for="nome">Nome:</label>
-      <input type="text" id="nome" [(ngModel)]="prodotto.nome" name="nome" required>
-      <div *ngIf="prodottoForm.get('nome')?.invalid && (prodottoForm.get('nome')?.dirty || prodottoForm.get('nome')?.touched)">
-      <div *ngIf="prodottoForm.get('nome')?.hasError('required')">Il nome è obbligatorio.</div>
-      </div> 
+      <input type="text" id="nome" [(ngModel)]="prodotto.nome" name="nome" formControlName="nome" required>
+      <div *ngIf="prodottoForm.get('nome')?.invalid && prodottoForm.get('nome')?.touched">
+        <div *ngIf="prodottoForm.get('nome')?.hasError('required')">Il nome è obbligatorio.</div>
+        <div *ngIf="prodottoForm.get('nome')?.hasError('minlength')">Il campo Nome deve contenere almeno 3 caratteri.</div>
+      </div>
     </div>
     <div class="form-group">
       <label for="marca">Marca:</label>
-      <input type="text" id="marca" [(ngModel)]="prodotto.marca" name="marca">
+      <input type="text" id="marca" [(ngModel)]="prodotto.marca" name="marca" formControlName="marca" required>
+      <div *ngIf="prodottoForm.get('marca')?.invalid && prodottoForm.get('marca')?.touched">
+        <div *ngIf="prodottoForm.get('marca')?.hasError('required')">Il campo Marca è obbligatorio.</div>
+      </div>
     </div>
     <div class="form-group">
       <label for="descrizione">Descrizione:</label>
-      <input type="text" id="descrizione" [(ngModel)]="prodotto.descrizione" name="descrizione">
-      <!-- Aggiungi qui le verifiche per la descrizione -->
+      <input type="text" id="descrizione" [(ngModel)]="prodotto.descrizione" name="descrizione" formControlName="descrizione">
+      <div *ngIf="prodottoForm.get('descrizione')?.invalid && prodottoForm.get('descrizione')?.touched">
+        <div *ngIf="prodottoForm.get('descrizione')?.hasError('required')">Il campo Descrizione è obbligatorio.</div>
+        <div *ngIf="prodottoForm.get('descrizione')?.hasError('minlength')">Il campo Descrizione deve contenere almeno 5 caratteri.</div>
+      </div>
     </div>
     <div class="form-group">
       <label for="prezzo">Prezzo:</label>
-      <input type="number" id="prezzo" [(ngModel)]="prodotto.prezzo" name="prezzo">
-      <div *ngIf="prodotto.prezzo !== undefined && prodotto.prezzo < 1" class="error">Il prezzo deve essere maggiore o uguale a 1.</div>
+      <input type="number" id="prezzo" [(ngModel)]="prodotto.prezzo" name="prezzo" formControlName="prezzo" required>
+      <div *ngIf="prodottoForm.get('prezzo')?.invalid && prodottoForm.get('prezzo')?.touched">
+        <div *ngIf="prodottoForm.get('prezzo')?.hasError('required')">Il campo Prezzo è obbligatorio.</div>
+        <div *ngIf="prodottoForm.get('prezzo')?.hasError('pattern')">Il campo Prezzo deve essere un numero positivo.</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="quantita">Quantità:</label>
+      <input type="number" id="quantita" [(ngModel)]="prodotto.quantita" name="quantita" formControlName="quantita" required>
+      <div *ngIf="prodottoForm.get('quantita')?.invalid && prodottoForm.get('quantita')?.touched">
+        <div *ngIf="prodottoForm.get('quantita')?.hasError('required')">Il campo Quantità è obbligatorio.</div>
+        <div *ngIf="prodottoForm.get('quantita')?.hasError('pattern')">Il campo Quantità deve essere un numero intero positivo.</div>
+      </div>
     </div>
     <div class="form-group">
       <label for="iva">IVA:</label>
-      <select id="iva" [(ngModel)]="prodotto.iva" name="iva" class="iva-select">
+      <select id="iva" [(ngModel)]="prodotto.iva" name="iva" formControlName="iva" class="iva-select" required>
         <option value="4">4%</option>
         <option value="10">10%</option>
         <option value="22">22%</option>
       </select>
-    </div>    
-    <div class="form-group">
-      <label for="quantita">Quantità:</label>
-      <input type="number" id="quantita" [(ngModel)]="prodotto.quantita" name="quantita">
-      <div *ngIf="prodotto.quantita !== undefined && prodotto.quantita < 1" class="error">La quantità deve essere maggiore o uguale a 1.</div>
     </div>
-    
     <div class="button-group">
-      <button type="submit" class="btn btn-primary">Salva Modifiche</button>
-      <button type="button" class="btn btn-secondary" (click)="annulla()">Annulla</button>
+      <button type="submit" class="button-salva">
+        <i class="pi pi-save"></i>Salva Modifiche</button>
+      <button type="button" class="button-annulla" (click)="annulla()">
+        <i class="pi pi-times"></i>Annulla</button>
     </div>
   </form>
 </div>
+
