--- a/src/app/home/menu/menu.component.html
+++ b/src/app/home/menu/menu.component.html
@@ -118,13 +118,16 @@
         </li>
       </ul>
     </li>
-    <li class="search">
-      <input type="text" pInputText placeholder="search" (input)="ricercaFornitori()" [(ngModel)]="searchTerm" />
-      <ul *ngIf="searchTerm && searchResults.length > 0" class="search-results">
-        <li *ngFor="let result of searchResults">
-          {{ result.nome }}
+    <div class="topbar1">
+      <!-- ... Altre parti del tuo codice ... -->
+    
+      <!-- Barra di ricerca -->
+      <input type="text" placeholder="Cerca " [(ngModel)]="searchTerm" (input)="searchProducts()">
+      <ul class="ul1" *ngIf="searchResults.length > 0">
+        <li class="li1" *ngFor="let productName of searchResults" (click)="goToProductPage()">
+          {{ productName }}
         </li>
       </ul>
-    </li>
+    </div>
   </ul>
 </div>
